@@ -8,6 +8,7 @@ VERSION 2.6
       argument.
 
   BUGFIXES:
+    * Fix memory leaks and a string zero termination issue in MP3tunes.
     * Don't poll for mounts every second, solid notifies us. (BR 289462)
     * Fix inconsistent Last.fm scrobbling in some cases with GStreamer
       backend.
